# exosphereprojects

./: README.md
batch-process-docs/: .gitignore  README.md  WORKFLOW.md  create_graph.py  env.example  logging_config.py  processing_prompt_template.txt  pyproject.toml  register.py  trigger_graph.py
batch-process-docs/nodes/: __init__.py  batch_processing.py  batch_request.py  chunking.py  database_write.py  failure_handling.py  file_parsing.py  polling.py  split_results.py  validation.py
sync-process-docs/: .gitignore  README.md  WORKFLOW.md  create_graph.py  logging_config.py  processing_prompt_template.txt  pyproject.toml  register.py  trigger_graph.py
sync-process-docs/nodes/: __init__.py  csv_input.py  database_write.py  failure_handling.py  file_distribution.py  sync_processing.py  validation.py
